--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,7 @@
+1.0.9 (Python) (Unreleased):
+- TBD
+1.0.9 (Lisp) (Unreleased):
+- TBD
+
 1.0.8 (Python):
 - get_all_blocks and get_entry_blocks now always return a set
