--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+1.0.10 (Python):
+- TBD
+
 1.0.9 (Python):
 - Added support for Python typing
 - The functionNames aux data table is now used for determing a function's name,
